--- a/about/index.html
+++ b/about/index.html
@@ -32,7 +32,7 @@
     
     
     <meta property="og:title" content="About" />
-<meta property="og:description" content="Hi! My name is Lakshmi S. I&#39;m a Machine Learning Engineer. Specialized in Time Series Analysis &amp; Forecasting." />
+<meta property="og:description" content="Hi! My name is Lakshmi S. I&#39;m a Machine Learning Engineer. As a data storyteller, my passion lies at the intersection of using data to tell cogent stories and providing useful and actionable insights to decision makers." />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://techielakshmi.github.io/Lakshmi_Portfolio/about/" />
 
